@@ -3,6 +3,7 @@ CHANGELOG
 2.1.17
 UTIL:
 * type=certificate | extend to TemplateStack
+* introduce class SharedGatewayStore | extend different classes to support SharedGateway
 
 BUGFIX:
 * type=ssh-connector in=admin@MGMT-IP setcommand-file=set-commands.txt | bugfix to correctly send set commands
